--- a/djangotemplates/clientapp/templates/about.html
+++ b/djangotemplates/clientapp/templates/about.html
@@ -1,19 +1,23 @@
+{% extends 'base.html' %} <!-- Add this for inheritance -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us</title>
+    <title>{% block title %}About Us {% endblock %}</title>
 </head>
 <body>
-  <p>
-  We are a group of Django enthusiasts with the following idiosyncrasies:
+  {% block pagecontent %}
+    <p>
+    We are a group of Django enthusiasts with the following idiosyncrasies:
 
-  <ol>
-    <li>We only eat bananas on Saturdays.</li>
-    <li>We love making playing football on rainy days.</li>
-  </ol>
-  </p>
-  <a href="{% url 'home' %}">Go Home</a>
-  <a href="{% url 'about' %}">About This Site</a>
+    <ol>
+        <li>We only eat bananas on Saturdays.</li>
+        <li>We love making playing football on rainy days.</li>
+    </ol>
+    </p>
+    <a href="{% url 'home' %}">Go Home</a>
+    <a href="{% url 'about' %}">About This Site</a>
+  {% endblock %}
 </body>
 </html>
